# realitni-asistent

./: .env.example  .gitignore  ARCHITECTURE.md  CONTEXT_INVENTORY.md  Caddyfile  README.md  SKILLS_ARCHITECTURE.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/api/: __init__.py  articles.py  auth.py  calendar.py  chat.py  favorites.py  gmail.py  health.py  nabor.py  news.py  notes.py  sfera.py  skills.py  status.py  videos.py  weather.py
backend/app/core/: __init__.py  claude_client.py  context_builder.py  embedding.py  memory.py  transcribe.py
backend/app/ingest/: __init__.py  parsers.py  run.py
backend/app/integrations/: __init__.py  gmail.py  google_calendar.py  google_oauth.py
backend/app/models/: __init__.py  db_models.py  schemas.py
backend/app/scheduler/: __init__.py  jobs.py  startup.py
backend/app/scrapers/: __init__.py  rss.py  sources.py
backend/app/security/: __init__.py  encryption.py
backend/app/skills/: __init__.py  articles.py  base.py  demo.py  nabor.py  registry.py  sfera.py  video_transcript.py
docs/: DEVELOPMENT.md  GOOGLE_OAUTH_SETUP.md  PHASE_2_STATUS.md  SKILL_IDEAS.md  WELCOME_BACK.md  WELCOME_BACK_2.md
frontend/: .dockerignore  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/favorites/: page.tsx
frontend/components/: CalendarWidget.tsx  ChatPanel.tsx  GmailWidget.tsx  Header.tsx  MatrixRain.tsx  NewsWidget.tsx  QuickNote.tsx  RecentNotesWidget.tsx  SkillTile.tsx  StatusWidget.tsx  WeatherWidget.tsx
frontend/lib/: api.ts  weatherCodes.ts
frontend/public/: manifest.json
plugins/.claude-plugin/: marketplace.json
scripts/: asistent-auto-deploy.service  asistent-auto-deploy.timer  asistent-cert-renew.service  asistent-cert-renew.timer  auto-deploy.sh  deploy.sh  dev-backend.ps1  dev-frontend.ps1  fix-claude-permissions.sh  gen-basic-auth.sh  gen-env.sh  install-auto-deploy.sh  scrape_saykin.py  setup-dev.ps1  setup-vps.sh  tailscale-cert-renew.sh
(+25 files in other folders)
