[project]
name = "realitni-asistent-backend"
version = "0.1.0"
description = "Backend pro osobního AI asistenta realitního makléře"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Adam Hoffík" }]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.1",
    "python-multipart>=0.0.17",

    # Data validation & settings
    "pydantic>=2.9",
    "pydantic-settings>=2.6",

    # Database
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "aiosqlite>=0.20.0",

    # Vector DB + embeddings
    "chromadb>=0.5.20",
    "sentence-transformers>=3.3.1",

    # AI — Claude Agent SDK
    "claude-agent-sdk>=0.1.0",

    # Scheduling
    "apscheduler>=3.10.4",

    # HTTP & scraping
    "httpx>=0.28.0",
    "trafilatura>=1.12.2",
    "feedparser>=6.0.11",
    "selectolax>=0.3.27",

    # Google APIs
    "google-auth>=2.36.0",
    "google-auth-oauthlib>=1.2.1",
    "google-api-python-client>=2.153.0",

    # Video / audio (Skill 2)
    "yt-dlp>=2024.11.0",
    "faster-whisper>=1.1.0",
    "ffmpeg-python>=0.2.0",

    # PDF / DOCX parsing (ingestion)
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
    "pdfplumber>=0.11.4",

    # Security
    "cryptography>=43.0.3",
    "passlib[bcrypt]>=1.7.4",

    # Utilities
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2",
    "orjson>=3.10.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]  # line length — handled by formatter

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
